# espoir-validation-hat

./: .gitignore  LICENSE  README.md
code/espoir-validation-hat/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
code/espoir-validation-hat/main/: CMakeLists.txt  espoir_validation_hat_main.cpp
code/espoir_validation_microshield/: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
code/espoir_validation_microshield/main/: CMakeLists.txt  main.cpp
code/run_qc/: main.py  pyproject.toml
code/run_qc/tests/: test_run_qc.py
pcb/: LICENSE  espoir_validation_hat.kicad_pcb  espoir_validation_hat.kicad_pro  espoir_validation_hat.kicad_sch  espoir_validation_mikroshield.kicad_pcb  espoir_validation_mikroshield.kicad_prl  espoir_validation_mikroshield.kicad_pro  espoir_validation_mikroshield.kicad_sch
